# ParallelFlow

./: CMakeLists.txt  Doxyfile  README.md
docs/: API.md  ARCHITECTURE.md
examples/: COMMANDS.md  alert_schema.json  sample_domain_blocklist.txt  sample_ip_blocklist.txt  sample_keywords.txt  summary_schema.json
include/: aho_corasick.h  args.h  common.h  ext_decoder.h  ext_scanner.h  ioc.h  mpi_gather.h  pcap_decode.h  protocol_types.h  scanner.h  space_saving.h
src/: args.cpp  common.cpp  ext_decoder.cpp  ext_scanner.cpp  ioc.cpp  main_mpi.cpp  main_pdc_analyzer.cpp  mpi_gather.cpp  pcap_decode.cpp  scanner.cpp
tests/: test_aho_corasick.cpp  test_common.cpp  test_ioc.cpp  test_protocol_types.cpp  test_space_saving.cpp
tools/dashboard/: main_dashboard.cpp
tools/gui/: main_pdc_gui.cpp
